--- a/views/business/plan-add.html
+++ b/views/business/plan-add.html
@@ -228,17 +228,18 @@
         $.ajax({
             type: "GET",
             contentType: "application/json; charset=utf-8",
-            url: domain + "api/order/findOrderPage?limit=50&t=" + new Date().getTime(),
+            url: domain + "api/order/searchOrder?statuss=1&t=" + new Date().getTime(),
             success: function(data) {
                 var tbody = "";
                 $.each(data.data, function(n, value) {
                     var trs = "";
-                    trs += "<option value=" + value.id + ">" + value.orderCode + "</option>";
+                    trs += "<option value=" + value.id + ">" + value.code + "</option>";
                     tbody += trs;
                 });
                 $("#orderId").append(tbody);
                 //添加带搜索框的下拉框
-                $("#orderId").searchableSelect("api/order/searchOrder?code=");
+                $("#orderId").searchableSelect("api/order/searchOrder?statuss=1&t=" + new Date().getTime() + "&code=");
+                $("#orderId").css("display", "none");
             },
         });
 
