--- a/views/business/sample-list-read.html
+++ b/views/business/sample-list-read.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>煜凯服饰</title>
+    <title>订单管理</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
@@ -18,14 +18,17 @@
             <div class="layui-card">
                 <div class="layui-card-header">样品列表</div>
                 <div class="layui-card-body">
+                    <div class="layui-btn-group" style="margin-bottom: 10px;">
+                        <button class="layui-btn" data-type="detail">查看</button>
+                    </div>
                     <div class="demoTable" style="margin-bottom: 10px;">
-                        样品名称：
-                        <div class="layui-inline">
-                            <input class="layui-input" name="sampleName" id="sampleName" autocomplete="off">
-                        </div>
-                        样品型号：
+                        款号：
                         <div class="layui-inline">
                             <input class="layui-input" name="sampleCode" id="sampleCode" autocomplete="off">
+                        </div>
+                        款式：
+                        <div class="layui-inline">
+                            <input class="layui-input" name="style" id="style" autocomplete="off">
                         </div>
                         <button class="layui-btn" data-type="reload">搜索</button>
                     </div>
@@ -34,7 +37,7 @@
 
                     <script type="text/html" id="imagesTpl">
                         {{#  if(d.photoUrl){ }}
-                            <button class="layui-btn images" lay-event="sampleImages">样品</button>
+                        <button class="layui-btn images" lay-event="sampleImages">样品</button>
                         {{#  } }}
                     </script>
                     <script type="text/html" id="statusTpl">
@@ -43,10 +46,6 @@
                         {{#  } else if(d.status === 1) { }}
                         <span style="color: #F581B1;">完成</span>
                         {{#  } }}
-                    </script>
-
-                    <script type="text/html" id="user-table-barDemo">
-                        <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
                     </script>
 
                 </div>
@@ -66,25 +65,29 @@
         var $ = layui.$
             , element = layui.element
             , layer = layui.layer
-            ,carousel = layui.carousel
             , table = layui.table;
 
 
         //方法级渲染
         table.render({
             elem: '#order-table'
-            , url: domain + 'api/sample/findSamplePage?status=1'
+            , url: domain + 'api/sample/findSamplePage?status=1&t=' + new Date().getTime()
             , cols: [[
-                {field: 'sampleName', title: '样品名称', width: 250, sort: true}
-                , {field: 'sampleCode', title: '样品型号', width: 150}
-                , {field: 'photoUrl', title: '样品', width: 150, templet: '#imagesTpl', unresize: true}
-                , {field: 'status', title: '状态', width: 100, templet: '#statusTpl', unresize: true}
+                {checkbox: true, fixed:'left'}
+                , {field: 'sampleCode', title: '款号', width: 180, sort: true}
+                , {field: 'needle', title: '针形', width: 100}
+                , {field: 'style', title: '款式', width: 150}
+                , {field: 'material', title: '材料', width: 150}
+                , {field: 'company', title: '公司', width: 150}
+                , {field: 'brand', title: '客户品牌', width: 150}
+                , {field: 'photoUrl', title: '图示', width: 110, templet: '#imagesTpl', unresize: true}
+                , {field: 'color', title: '颜色', width: 100}
+                , {field: 'status', title: '是否中标', width: 100, templet: '#statusTpl', unresize: true}
                 , {field: 'createTime', title: '创建时间', width: 180}
-                , {align: 'center', fixed: 'right', toolbar: '#user-table-barDemo'}
+                , {field: 'remarks', title: '备注', width: 180}
             ]]
             , id: 'orderTable'
             , page: true
-            ,height: 'full-100'
         });
 
         element.render();
@@ -92,48 +95,7 @@
         //监听工具条
         table.on('tool(order-table)', function (obj) {
             var data = obj.data;
-            if (obj.event === 'detail') {
-                var index = layer.open({
-                    type: 2,
-                    title: "查看订单",
-                    content: 'sample-detail.html?id=' + data.id,
-                    area: ['300px', '300px'],
-                    maxmin: true,
-                    success: function (layero, index) {
-                    }
-                });
-                layer.full(index);
-            } else if (obj.event === 'edit') {
-                var index = layer.open({
-                    type: 2,
-                    title: "查看订单",
-                    content: 'sample-edit.html?id=' + data.id,
-                    area: ['300px', '300px'],
-                    maxmin: true,
-                    success: function (layero, index) {
-                    }
-                });
-                layer.full(index);
-            } else if (obj.event === 'del') {
-                layer.confirm('确定删除该样品吗？', function (index) {
-                    $.ajax({
-                        type: 'DELETE',
-                        contentType: "application/json;",
-                        url: domain + "api/sample/delete/"+ data.id,
-                        success: function (result) {
-                            if (result.code == 0) {
-                                layer.msg(result.msg);
-                                layui.table.reload('orderTable');
-                            } else {
-                                layer.alert(result.msg);
-                            }
-                        },
-                        error: function () {
-                            console.log("网络错误！");
-                        }
-                    });
-                });
-            } else if (obj.event === 'sampleImages') {
+            if (obj.event === 'sampleImages') {
                 var json = {
                     "code": 0,
                     "msg": "",
@@ -149,18 +111,18 @@
                     json.data = images_data;
                 });
                 layer.photos({
-                 photos: json //格式见API文档手册页
-                 });
+                    photos: json //格式见API文档手册页
+                });
             }
         });
 
         /* 触发弹层 */
         var active = {
-            add: function () {
+            detail: function () {
                 var index = layer.open({
                     type: 2,
-                    title: "新增样品",
-                    content: 'sample-add.html',
+                    title: "修改样品",
+                    content: 'sample-edit.html',
                     area: ['300px', '300px'],
                     maxmin: true
                 });
@@ -173,7 +135,7 @@
                         curr: 1 //重新从第 1 页开始
                     }
                     , where: {
-                        sampleName: $('#sampleName').val(),
+                        style: $('#style').val(),
                         sampleCode: $('#sampleCode').val()
                     }
                 });
